change to single dockerfile per version, and add gcc10

--- a/avr-gcc-10.1.0-p0829-linux/Dockerfile
+++ b/avr-gcc-10.1.0-p0829-linux/Dockerfile
@@ -10,7 +10,7 @@ ENV PREFIX=/opt/avr-gcc
 
 WORKDIR /opt
 
-#First download and install avr-gcc binutils
+# First download and install avr-gcc binutils
 # Since we don't need it after installation, just remove it completly afterwards
 RUN wget https://ftpmirror.gnu.org/binutils/binutils-2.31.tar.xz \
 	&& tar -xf binutils-2.31.tar.xz  \
@@ -28,7 +28,7 @@ ENV PATH=$PREFIX/bin:$PATH
 
 # Now get gcc and compile and install it for the first layer.
 # This will make avr-gcc available and allow us to build the C-library
-RUN git clone --depth 1 --branch p0829-9_2_0-release https://gitlab.com/avr-libstdcxx/gcc.git \
+RUN git clone --depth 1 --branch p0829-10-release https://gitlab.com/avr-libstdcxx/gcc.git \
 	&& cd gcc \
 	&& mkdir obj-avr  \
 	&& cd obj-avr \
@@ -56,4 +56,3 @@ RUN cd gcc/obj-avr && \
 	../configure --prefix=$PREFIX --target=avr --enable-languages=c,c++ --disable-nls --disable-libssp --with-dwarf2 --with-newlib --disable-__cxa_atexit --disable-threads --disable-shared --enable-static --disable-sjlj-exceptions --enable-libstdcxx --enable-lto --disable-hosted-libstdcxx && \
 	make -s -j`nproc` && \
 	make -s install
-
